# sparse-ops

./: .gitignore  CMakeLists.txt  README.md  setup.py
include/sparse_ops/: devoxelize.h  fixed_vec.h  reduce.h  thrust_allocator.h  torch_utils.h  voxelize.h
include/sparse_ops/thrust/: devoxelize.hpp  misc.hpp  reduce.hpp  voxelize.hpp
sparse_ops/: __init__.py  devoxelize.py  reduce.py  voxelize.py
src/sparse_ops/: CMakeLists.txt  devoxelize.cpp  reduce.cpp  voxelize.cpp
src/sparse_ops/autograd/: devoxelize.cpp
src/sparse_ops/cuda/: devoxelize.cu  reduce.cu  voxelize.cu
src/sparse_ops/thrust/: voxelize.cpp
tools/setup_helpers/: cmake.py
